[package]
name = "member"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["rt"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
